--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "identity",
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"description": "",
 	"scripts": {
-		"start": "vite",
+		"start": "vite --host",
 		"dev": "vite",
 		"build": "vite build",
 		"serve": "vite preview"
@@ -15,6 +15,8 @@
 		"vite-plugin-solid": "^2.2.6"
 	},
 	"dependencies": {
+		"fast-simplex-noise": "^4.0.0",
+		"rand-seed": "^1.0.1",
 		"solid-js": "^1.3.10"
 	}
 }
