--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "identity",
-	"version": "0.1.5",
+	"version": "0.1.6",
 	"description": "",
 	"scripts": {
 		"start": "vite --host",
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"typescript": "^4.6.2",
 		"vite": "^2.8.6",
+		"vite-plugin-pwa": "^0.11.13",
 		"vite-plugin-solid": "^2.2.6"
 	},
 	"dependencies": {
